; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/gdbserver/extr_regcache.c_find_register_by_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/gdbserver/extr_regcache.c_find_register_by_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reg = type { i32 }

@num_registers = common dso_local global i32 0, align 4
@reg_defs = common dso_local global %struct.reg* null, align 8
@.str = private unnamed_addr constant [30 x i8] c"Unknown register %s requested\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.reg* @find_register_by_name(i8* %0) #0 {
  %2 = alloca %struct.reg*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %25, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @num_registers, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %28

9:                                                ; preds = %5
  %10 = load i8*, i8** %3, align 8
  %11 = load %struct.reg*, %struct.reg** @reg_defs, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.reg, %struct.reg* %11, i64 %13
  %15 = getelementptr inbounds %struct.reg, %struct.reg* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @strcmp(i8* %10, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %9
  %20 = load %struct.reg*, %struct.reg** @reg_defs, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.reg, %struct.reg* %20, i64 %22
  store %struct.reg* %23, %struct.reg** %2, align 8
  br label %31

24:                                               ; preds = %9
  br label %25

25:                                               ; preds = %24
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %5

28:                                               ; preds = %5
  %29 = load i8*, i8** %3, align 8
  %30 = call i32 @fatal(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %29)
  store %struct.reg* null, %struct.reg** %2, align 8
  br label %31

31:                                               ; preds = %28, %19
  %32 = load %struct.reg*, %struct.reg** %2, align 8
  ret %struct.reg* %32
}

declare dso_local i32 @strcmp(i8*, i32) #1

declare dso_local i32 @fatal(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
